--- a/Auth.API/appsettings.json
+++ b/Auth.API/appsettings.json
@@ -12,6 +12,6 @@
     "Audience": "auth.com/api"
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Port=5432;Database=postgres;Username=postgres;Password=B100dy50.waf!"
+    "DefaultConnection": "Host=localhost;Port=5432;Database=postgres;Username=postgres;Password=password"
   }
 }
